track classpath structure and content digests of all external deps
GitOrigin-RevId: 1b412b4d2d5ec7742bc0508e97c5b0e08f3f1359